--- a/src/assets/Home/Home.css
+++ b/src/assets/Home/Home.css
@@ -23,4 +23,14 @@
 .container{
     display: flex;
 }
-
+.btn{
+    background-color: rgb(21, 70, 116);
+    color: white;
+    padding: 8px;
+    border-radius: 5px;
+    font-weight: 500;
+    border: 0px;
+    cursor: pointer;
+    
+ 
+}
